--- a/src/components/cta/CTA.css
+++ b/src/components/cta/CTA.css
@@ -12,7 +12,7 @@
 
 .gpt3__cta-content p {
     color: #0E0E0E;
-    font-family: Manrope;
+    font-family: var(--font-family);
     font-size: 12px;
     font-style: normal;
     font-weight: 500;
@@ -22,7 +22,7 @@
 
 .gpt3__cta-content h3 {
     color: #000;
-    font-family: Manrope;
+    font-family: var(--font-family);
     font-size: 24px;
     font-style: normal;
     font-weight: 800;
@@ -41,7 +41,7 @@
     border-radius: 40px;
     background: #000;
     color: #FFF;
-    font-family: Manrope;
+    font-family: var(--font-family);
     font-size: 18px;
     font-style: bold;
     font-weight: 700;
